# ICG_src

computer_graphic/ICG_2025_HW3_animation/src/: CMakeLists.txt  animated_model.cpp  main_animated.cpp  shader.cpp
computer_graphic/ICG_2025_HW3_animation/src/asset/: Dancing_Twerk.fbx  DogBallon.fbx  Drop_Kick.fbx  Samba Dancing.fbx
computer_graphic/ICG_2025_HW3_animation/src/asset/gromit-doing-the-metro-man-dance/source/: gromit doing the metro man dance.fbx
computer_graphic/ICG_2025_HW3_animation/src/asset/wallace-doing-the-toothless-dance/source/: Samba Dancing (4).fbx
computer_graphic/ICG_2025_HW3_animation/src/header/: animated_model.h  shader.h
computer_graphic/ICG_2025_HW3_animation/src/shaders/: animated_bling-phong.vert  animated_default.vert  animated_glass_schlick.vert  animated_gouraud.vert  animated_metallic.vert  animated_toon.vert  bling-phong.frag  cubemap.vert  default.frag  explosion.gs  fade.frag  glass_schlick.frag  gouraud.frag  metallic.frag  metallic.gs  pulse.gs  toon.frag
